--- a/gmdb-backend/src/main/resources/application.properties
+++ b/gmdb-backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:postgresql://gmdb.c9obrjjgrrkn.us-east-1.rds.amazonaws.com:5432/gmdb
+spring.datasource.username=jensbernhart
+spring.datasource.password=jensbernhart
+#Daten sind unverschlüsselt im Projekt gespeichert, welches public in github ist
+
+# spring.datasource.initialization-mode=always
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql = true
+
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.sqlScriptEncoding=UTF-8
+
+
+
+#spring.jpa.properties.hibernate.format_sql=true
 
